# bilibili-subtitle-summarize

./: .gitignore  README.md  pyproject.toml  requirements.txt
bilibili_subtitle/: __init__.py  cli.py  downloader.py  summarizer.py
bilibili_subtitle_summarize.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
